# stl-slicer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Header/: Coordinate.h++  Exporter.h++  Line.h++  Model.h++  ModelLoader.h++  Point.h++  Point3.h++  Slicer.h++  Triangle.h++
Source/: Coordinate.cpp  Exporter.cpp  Line.cpp  Model.cpp  ModelLoader.cpp  Point.cpp  Point3.cpp  Slicer.cpp  Triangle.cpp
